test/src/e2e_vm_tests/test_programs/should_fail/repeated_enum_variant/src/main.sw
script;

enum E {
    A: u64,
    A: b256,
    A: str,
}

fn main() -> u64 {
    0
}
